--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,3 +1,5 @@
 <div class="tasks-wrap">
-  <app-task-add></app-task-add>
+  <app-task-add (newTaskText)="onSelectNewTask($event)"></app-task-add>
+  <app-task-list [(task)]="newTestTask"></app-task-list>
+  {{newTestTask}}
 </div>
