--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-tasks></app-tasks>
+<div class="tasks-wrap">
+  <app-task-add (newTaskText)="onSelectNewTask($event)"></app-task-add>
+  <app-task-list [(task)]="newTestTask"></app-task-list>
+  {{newTestTask}}
+</div>
 <router-outlet></router-outlet>
