add task service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="tasks-wrap">
-  <app-task-add (newTaskText)="onSelectNewTask($event)"></app-task-add>
-  <app-task-list [(task)]="newTestTask"></app-task-list>
-  {{newTestTask}}
+  <app-task-add (newTask)="addNewTask($event)"></app-task-add>
+  <app-task-list [(task)]="newTaskText"></app-task-list>
+  {{newTaskText}}
 </div>
 <router-outlet></router-outlet>
