--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -8,5 +8,6 @@
     </div>
     <p class="mb-1">{{task.description}}</p>
     <small class="text-muted">{{task.isDone}}</small>
+    <i class="fa fa-times" aria-hidden="true"></i>
   </a>
 </div>
