--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -9,6 +9,8 @@
     <p class="mb-1">{{task.description}}</p>
     <small class="text-muted">{{task.isDone}}</small>
 
-    <i class="fa fa-times" aria-hidden="true"></i>
+    <i class="fa fa-times"
+       aria-hidden="true"
+       (click)="deleteTask(task._id)"></i>
   </a>
 </div>
