refactor, add task module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,4 @@
-<div class="tasks-wrap">
-  <app-task-add (newTask)="addNewTask($event)"></app-task-add>
-
-  <div class="container-fluid">
-    <app-task-list [tasks]="tasks" (delTaskEvent)="delTask($event)"></app-task-list>
-  </div>
-</div>
-
+<h1>app component 1</h1>
 <router-outlet></router-outlet>
 
 
