fix styles for task components

--- a/src/app/modules/tasks/components/task-add/task-add.component.scss
+++ b/src/app/modules/tasks/components/task-add/task-add.component.scss
@@ -1,3 +1,13 @@
+.input-group {
+  padding: 10px;
+}
+
 .btn:hover {
   cursor: pointer;
+}
+
+.btn-secondary:hover {
+  color: #fff;
+  background-color: #434c62;
+  border-color: #434c62;
 }
