--- a/src/app/modules/tasks/components/task-list/task-list.component.html
+++ b/src/app/modules/tasks/components/task-list/task-list.component.html
@@ -2,15 +2,17 @@
      *ngFor="let task of tasks">
   <a href="#"
      class="list-group-item list-group-item-action flex-column align-items-start">
+
     <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">{{task.header}}</h5>
-      <small>{{task.date}} - 3 days ago</small>
+      <h5 class="mb-1">{{task?.header}}</h5>
+      <small>{{task?.date}} - 3 days ago</small>
     </div>
-    <p class="mb-1">{{task.description}}</p>
-    <small class="text-muted">{{task.isDone}}</small>
+
+    <p class="mb-1">{{task?.description}}</p>
+    <small>{{task?.isDone}}</small>
 
     <i class="fa fa-times"
        aria-hidden="true"
-       (click)="deleteTask(task._id)"></i>
+       (click)="deleteTask(task?._id)"></i>
   </a>
 </div>
