--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<h1>app component 1</h1>
-<router-outlet></router-outlet>
+<div class="container-fluid wrap">
+  <router-outlet></router-outlet>
+</div>
 
 
