--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/scss/bootstrap";
 @import "./assets/libs/font-awesome-4.7.0/css/font-awesome.min.css";
+
+body {
+  background-color: #1D2733;
+}
