--- a/src/app/modules/tasks/components/task-add/task-add.component.scss
+++ b/src/app/modules/tasks/components/task-add/task-add.component.scss
@@ -11,3 +11,9 @@
   background-color: #434c62;
   border-color: #434c62;
 }
+
+.btn-secondary.disabled,
+.btn-secondary:disabled {
+  background-color: #727b84;
+  border-color: #6c757d;
+}
