--- a/src/app/modules/tasks/components/task-list/task-list.component.scss
+++ b/src/app/modules/tasks/components/task-list/task-list.component.scss
@@ -2,12 +2,16 @@
   padding: 2px 0;
   position: relative;
 
-  a.list-group-item {
+  .list-group-item {
     background-color: #434c53;
     color: #ffffff;
+
+    .fa-times:hover {
+      cursor: pointer;
+    }
   }
 
-  a.list-group-item-action:hover {
+  .list-group-item-action:hover {
     background-color: #434c62;
   }
 
