add select component

--- a/src/app/modules/tasks/components/task-list/task-list.component.html
+++ b/src/app/modules/tasks/components/task-list/task-list.component.html
@@ -10,7 +10,11 @@
     </div>
 
     <p class="mb-1">{{task?.description}}</p>
-    <small>{{task?.isDone}}</small>
+
+    <app-select [options]="statuses"
+                [currentValue]="task?.status"
+                (updateStatus)="changeStatus($event, task?._id)">
+    </app-select>
 
     <i class="fa fa-times"
        aria-hidden="true"
