--- a/src/app/modules/tasks/pages/task-page/task-page.component.html
+++ b/src/app/modules/tasks/pages/task-page/task-page.component.html
@@ -10,7 +10,8 @@
   </section>
   <article class="task-list">
     <app-task-list [tasks]="tasks"
-                   (delTaskEvent)="delTask($event)">
+                   (delTaskEvent)="delTask($event)"
+                   (changeStatusTask)="changeTaskStatus($event)">
     </app-task-list>
   </article>
 </main>
