--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,8 @@
 @import "~bootstrap/scss/bootstrap";
 @import "./assets/libs/font-awesome-4.7.0/css/font-awesome.min.css";
 
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
 body {
   background-color: #1D2733;
 }
