--- a/src/app/modules/tasks/pages/task-page/task-page.component.scss
+++ b/src/app/modules/tasks/pages/task-page/task-page.component.scss
@@ -1,3 +1,19 @@
 .task-new {
   padding-bottom: 15px;
 }
+
+::ng-deep .search {
+  &__field {
+    color: #ffffff;
+  }
+
+  .mat-form-field-label,
+  .mat-form-field-label-wrapper,
+  .mat-input-element {
+    color: #cccccc;
+  }
+
+  .mat-input-underline {
+    background-color: #ffffff;
+  }
+}
