--- a/public/app/modules/tasks/pages/task-page/task-page.component.html
+++ b/public/app/modules/tasks/pages/task-page/task-page.component.html
@@ -1,21 +1,26 @@
+<header>
+  <span class="header">Task manager</span>
+</header>
+
+<br />
+<br />
+
 <main>
   <section class="task-new">
     <div class="row">
-      <div class="col-md-3"></div>
-      <div class="col-md-6">
+      <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
         <app-task-add (newTask)="addNewTask($event)"></app-task-add>
       </div>
-      <div class="col-md-3"></div>
+
+      <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+        <mat-form-field class="field-search">
+          <input matInput
+                 [(ngModel)]="searchText"
+                 placeholder="Search by name">
+        </mat-form-field>
+      </div>
     </div>
   </section>
-
-  <div class="search">
-    <mat-form-field class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 search__field">
-      <input matInput
-             [(ngModel)]="searchText"
-             placeholder="Enter the name of task">
-    </mat-form-field>
-  </div>
 
   <article class="task-list">
     <app-task-list *ngIf="tasks && tasks.length"
